--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate 3D Contribution
-        uses: yoshi389111/github-profile-3d-contrib@v0.7.1
+        uses: yoshi389111/github-profile-3d-contrib@main
         with:
           username: tophermoa
           output_dir: profile-3d-contrib
