--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -17,15 +17,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate 3D Contribution
-        uses: yoshi389111/github-profile-3d-contrib@main
-        with:
-          username: tophermoa
-          output_dir: profile-3d-contrib
+        uses: yoshi389111/github-profile-3d-contrib@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          USERNAME: tophermoa
 
       - name: Commit & Push
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add profile-3d-contrib
+          git add -A
           git commit -m "generate 3d contribution" || echo "no changes"
           git push
